--- a/config.json
+++ b/config.json
@@ -1,13 +1,25 @@
 {
-	"warehousedir": "etrimlwarehouse", 
-	"verbose": "True", 
-	"b_show_latency": "True", 
-	"backend_server": "None", 
-	"epsabs": 10.0, 
-	"epsrel": 0.1, 
-	"mesh_grid_num": 20, 
-	"limit": 30, 
-	"csv_split_char": ",", 
-	"num_epoch": 400, 
-	"reg_type": "mdn"
+    "warehousedir": "etrimlwarehouse",
+    "reg_type": "mdn",
+    "density_type": "mdn",  
+    "backend_server": "None",
+    "b_grid_search": "False",
+    "b_dummy_gb": "False",
+    "n_total_point": "None",
+    "scaling_factor": "None",
+    "csv_split_char": ",",
+    "table_header": "None",
+    "accept_filter": "False",
+    "n_epoch": 300,
+    "n_gaussians_reg": 3,
+    "n_gaussians_density": 10,
+    "b_use_gg": "False",
+    "n_per_gg": 260,
+    "n_hidden_layer": 1,
+    "n_mdn_layer_node_reg": 10,
+    "n_mdn_layer_node_density": 10,
+    "n_embedding_dim": 20,
+    "encoder": "embedding", 
+    "batch_size": 1000,
+    "one_model": "True"	
 }
